--- a/styles.css
+++ b/styles.css
@@ -206,3 +206,53 @@ textarea{
   justify-content: center;
   align-content: center;  
 }
+
+img{
+  width: 100px;
+  height: 100px;
+}
+
+#results{
+  display: inline-block;
+ 
+  flex-direction: column;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+#deletePost{
+  width: 100px;
+  height: 40px;
+  background-color: teal;
+  border: 2px solid #983F82;
+  border-radius: 5pt;
+  font-family: 'Assistant', sans-serif;
+  font-size: 16px !important;
+  color: #edf8f0;
+  margin: 5px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+#edit{
+  width: 100px;
+  height: 40px;
+  background-color: teal;
+  border: 2px solid #983F82;
+  border-radius: 5pt;
+  font-family: 'Assistant', sans-serif;
+  font-size: 16px !important;
+  color: #edf8f0;
+  margin: 5px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
