--- a/styles.css
+++ b/styles.css
@@ -209,8 +209,10 @@ textarea{
 }
 
 img{
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
+  margin: 40px;
+  border-radius:5pt ;
 }
 
 
@@ -261,4 +263,31 @@ img{
   text-align: center;
   align-items: center;
   justify-content: center;
+}
+
+
+a{
+  width: 220px;
+  height: 40px;
+  background-color: teal;
+  border: 2px solid #983F82;
+  border-radius: 5pt;
+  font-family: 'Assistant', sans-serif;
+  font-size: 16px !important;
+  color: #edf8f0;
+  margin: 5px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center; 
+}
+
+#goTo{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center; 
 }
